--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,12 @@
 {
-    "name": "padnis-frontend",
+    "name": "padnis",
     "version": "1.0.0",
-    "private": true,
     "dependencies": {
-        "@emotion/react": "^11.14.0",
-        "@emotion/styled": "^11.14.0",
-        "@mui/icons-material": "^7.0.1",
-        "@mui/material": "^7.0.1",
-        "@reduxjs/toolkit": "^2.6.1",
-        "axios": "^1.6.8",
-        "materialize-css": "^1.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-redux": "^9.2.0",
-        "redux": "^5.0.1"
+      "bcrypt": "^5.1.0",
+      "jsonwebtoken": "^9.0.0",
+      "mongoose": "^6.10.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "devDependencies": {
-        "react-scripts": "5.0.1"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+      "vercel-build": "cd frontend && npm install && npm run build"
     }
-}
+  }
