--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,12 @@
 {
-    "name": "padnis-backend",
+    "name": "padnis",
     "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
-    },
     "dependencies": {
-        "bcrypt": "^5.1.1",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.2.3"
+      "bcrypt": "^5.1.0",
+      "jsonwebtoken": "^9.0.0",
+      "mongoose": "^6.10.0"
     },
-    "devDependencies": {
-        "nodemon": "^3.1.0"
+    "scripts": {
+      "vercel-build": "cd frontend && npm install && npm run build"
     }
-}
+  }
