--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,6 @@
       "mongoose": "^6.10.0"
     },
     "scripts": {
-      "vercel-build": "cd frontend && npm install && npm run build"
+      "vercel-build": "npm install && npm run build"
     }
   }
