--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,20 @@
     "dependencies": {
       "bcrypt": "^5.1.0",
       "jsonwebtoken": "^9.0.0",
-      "mongoose": "^6.10.0"
+      "mongoose": "^6.10.0",
+      "@mui/material": "^5.15.0",
+      "@emotion/react": "^11.11.0",
+      "@emotion/styled": "^11.11.0",
+      "axios": "^1.6.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-redux": "^8.0.5",
+      "redux": "^4.2.0",
+      "react-scripts": "5.0.1"
     },
     "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
       "vercel-build": "npm install && npm run build"
     }
   }
