--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,14 @@
     "name": "padnis",
     "version": "1.0.0",
     "dependencies": {
+      "@emotion/react": "^11.11.0",
+      "@emotion/styled": "^11.11.0",
+      "@mui/material": "^5.15.0",
+      "@reduxjs/toolkit": "^1.9.5",  // Añadido
+      "axios": "^1.6.0",
       "bcrypt": "^5.1.0",
       "jsonwebtoken": "^9.0.0",
       "mongoose": "^6.10.0",
-      "@mui/material": "^5.15.0",
-      "@emotion/react": "^11.11.0",
-      "@emotion/styled": "^11.11.0",
-      "axios": "^1.6.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-redux": "^8.0.5",
