--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
       "@emotion/react": "^11.11.0",
       "@emotion/styled": "^11.11.0",
       "@mui/material": "^5.15.0",
-      "@reduxjs/toolkit": "^1.9.5",  // Añadido
+      "@reduxjs/toolkit": "^1.9.5",
       "axios": "^1.6.0",
       "bcrypt": "^5.1.0",
       "jsonwebtoken": "^9.0.0",
