--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "padnis",
-    "version": "1.0.0",
+    "name": "padnis-frontend",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
       "@emotion/react": "^11.11.0",
       "@emotion/styled": "^11.11.0",
       "@mui/material": "^5.15.0",
+      "@mui/icons-material": "^5.15.0",
       "@reduxjs/toolkit": "^1.9.5",
       "axios": "^1.6.0",
-      "bcrypt": "^5.1.0",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^6.10.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-redux": "^8.0.5",
@@ -19,6 +18,7 @@
     "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
-      "vercel-build": "npm install && npm run build"
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
     }
   }
