--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-    "name": "padnis",
-    "version": "1.0.0",
-    "dependencies": {
-      "bcrypt": "^5.1.0",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^6.10.0"
-    }
+  "name": "padnis",
+  "version": "1.0.0",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.10.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
+}
