--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "react-scripts": "5.0.1",
-    "react-swipeable-views": "^0.14.0"
+    "swiper": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
