--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,21 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.2",
     "swiper": "^11.0.0"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "jest": "^29.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx}"
   }
 }
