--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-error-boundary": "^4.0.13",
+    "axios": "^1.6.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
     "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.7.1",
     "swiper": "^11.0.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^6.0.0",
-    "jest": "^29.0.0",
+    "@testing-library/react": "^14.0.0",
     "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.0.0"
+    "eslint-plugin-react": "^7.0.0",
+    "jest": "^29.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
